--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -81,6 +81,7 @@ Manuel Egele, Boston University
 \input{introduction}
 \input{background}
 \input{holmes/holmes}
+\input{formal/formal}
 \input{alias}
 \input{codependence}
 \input{staticflow}
