--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,5 +1,5 @@
 
-@inproceedings{dewey_uncovering_2015,
+@inproceedings{dewey-uncovering-2015,
   title = {Uncovering {{Use}}-{{After}}-{{Free Conditions}} in {{Compiled Code}}},
   booktitle = {Availability, {{Reliability}} and {{Security}} ({{ARES}}), 2015 10th {{International Conference}} On},
   publisher = {{IEEE}},
@@ -22,7 +22,7 @@
   file = {/home/maurer/Zotero/storage/D7DMJPCX/leedangnull.pdf}
 }
 
-@inproceedings{caballero_undangle_2012,
+@inproceedings{undangle,
   title = {Undangle: Early Detection of Dangling Pointers in Use-after-Free and Double-Free Vulnerabilities},
   shorttitle = {Undangle},
   booktitle = {Proceedings of the 2012 {{International Symposium}} on {{Software Testing}} and {{Analysis}}},
@@ -114,7 +114,7 @@
   file = {/home/maurer/Zotero/storage/VZX8BUV5/p32-steensgaard.pdf}
 }
 
-@phdthesis{andersen_alias,
+@phdthesis{andersen-alias,
   type = {{{PhD Thesis}}},
   title = {Program Analysis and Specialization for the {{C}} Programming Language},
   school = {University of Cophenhagen},
@@ -737,6 +737,30 @@
   year = {1992},
   pages = {127--138},
   file = {/home/maurer/Zotero/storage/58XVSCST/Van Gelder - 1992 - The well-founded semantics of aggregation.ps;/home/maurer/Zotero/storage/LSD52J4E/citation.html}
+}
+
+@inproceedings{peloton,
+  title = {Self-{{Driving Database Management Systems}}.},
+  booktitle = {{{CIDR}}},
+  author = {Pavlo, Andrew and Angulo, Gustavo and Arulraj, Joy and Lin, Haibin and Lin, Jiexi and Ma, Lin and Menon, Prashanth and Mowry, Todd C. and Perron, Matthew and Quah, Ian},
+  year = {2017},
+  file = {/home/maurer/Zotero/storage/NIRUGL55/p42-pavlo-cidr17.pdf}
+}
+
+@article{tetris,
+  archivePrefix = {arXiv},
+  eprinttype = {arxiv},
+  eprint = {1404.0703},
+  primaryClass = {cs},
+  title = {Joins via {{Geometric Resolutions}}: {{Worst}}-Case and {{Beyond}}},
+  shorttitle = {Joins via {{Geometric Resolutions}}},
+  abstract = {We present a simple geometric framework for the relational join. Using this framework, we design an algorithm that achieves the fractional hypertree-width bound, which generalizes classical and recent worst-case algorithmic results on computing joins. In addition, we use our framework and the same algorithm to show a series of what are colloquially known as beyond worst-case results. The framework allows us to prove results for data stored in Btrees, multidimensional data structures, and even multiple indices per table. A key idea in our framework is formalizing the inference one does with an index as a type of geometric resolution; transforming the algorithmic problem of computing joins to a geometric problem. Our notion of geometric resolution can be viewed as a geometric analog of logical resolution. In addition to the geometry and logic connections, our algorithm can also be thought of as backtracking search with memoization.},
+  journal = {arXiv:1404.0703 [cs]},
+  author = {Khamis, Mahmoud Abo and Ngo, Hung Q. and R\'e, Christopher and Rudra, Atri},
+  month = apr,
+  year = {2014},
+  keywords = {Computer Science - Data Structures and Algorithms,Computer Science - Databases},
+  file = {/home/maurer/Zotero/storage/454PGLCB/Khamis et al. - 2014 - Joins via Geometric Resolutions Worst-case and Be.pdf;/home/maurer/Zotero/storage/87K9B2QL/1404.html}
 }
 
 
