--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -87,11 +87,12 @@ Manuel Egele, Boston University
 \input{formal/formal}
 \input{alias/alias}
 \input{bitr/BiTR-0}
+\input{tachyon/tachyon}
 \input{conclusion}
 
 \backmatter
 \renewcommand{\bibsection}{\chapter{\bibname}}
 \bibliographystyle{plain}
-\bibliography{thesis,bitr/BiTR-0}
+\bibliography{thesis,bitr/BiTR-0,tachyon/tachyon}
 
 \end{document}
